Fixes a Geolocation bug with cached positions.

In the case where a watch request returns a cached position, we must clear the cached position to prevent it from being used repeatedly in the case where the watch timer later fires.

Also cleans up some code and adds some comments.

This will be upstreamed to webkit.org in https://bugs.webkit.org/show_bug.cgi?id=30676

Change-Id: I4968731453c3dfd34a8d3466fdaee91d4c4158be